STYLE: fixed spacing in footer for mobile

--- a/public/css/globals/footer.css
+++ b/public/css/globals/footer.css
@@ -46,8 +46,14 @@ footer .container {
 }
 
 @media (max-width: 700px) {
+    footer
+
     footer .container {
-        gap: 2rem;
+        gap: 1.5rem;
         grid-template-columns: repeat(1, 1fr);
+    }
+
+    #socials-container {
+        gap: 0.5rem;
     }
 }
